[package]
name = "llmux"
version = "0.1.0"
edition = "2021"
authors = ["Dionner <dionner@llmux.dev>"]
description = "A developer-first CLI toolkit for working with multiple LLM providers"
license = "MIT"
readme = "README.md"
keywords = ["llm", "ai", "cli", "openai", "gemini"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "env"] }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
crossterm = "0.27"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
tokio-stream = "0.1"
futures-util = "0.3"
toml = "0.8"
ratatui = "0.27"

[[bin]]
name = "llmux"
path = "src/main.rs"
